change msn time stamp on mobile to animation and disappear to prevent bug

--- a/src/css/MSN.css
+++ b/src/css/MSN.css
@@ -582,23 +582,15 @@
 .chat_date {
     opacity: 0;
     position: absolute;
-    padding: 2px 4px;
-    background: #1b1818f7;
+    width: 100%;
+    background: transparent;
+    color: black;
+    text-align: end;
     border-radius: 2px;
     color: rgb(212, 205, 205);
     font-size: 11px;
     z-index: 1;
 }
-
-
-
-@media screen and (width <= 500px) {
-    .chat_date {
-        width: 100%;
-        background: transparent;
-        color: black;
-        text-align: end;
-    }
 
     .mobile_chat_date {
         padding: 4px 4px;
@@ -607,7 +599,8 @@
         font-size: 11px;
         color: rgb(212, 205, 205);
     }
-}
+
+
 
 @keyframes msnShake {
   0%   { margin-left: 0; }
